materials/golang-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: golang-pod
spec:
  containers:
  - name: golang
    image: golang:1.13.3-alpine3.10
    command: ['sh', '-c', 'sleep 360000']
