materials/green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: green
spec:
  selector:
    app: green
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
