materials/blue-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blue
spec:
  hosts:
  - "maru-blue-green.bobcat.devsisters.cloud"
  http:
  - route:
    - destination:
        host: blue
        port:
          number: 8080
